# gaussian-process-regression

./: CMakeLists.txt  LICENSE  README.md  init_for_boost_python  package.xml
include/gaussian_process_regression/: eigen_numpy_conversion.h  gaussian_process_regression.h  gaussian_process_regression.hxx
src/: #gpr_python_interface.cpp#  .#gpr_python_interface.cpp  converter_dummy.cpp  eigen_numpy_tester.cpp  gpr_python_interface.cpp
test/: hyperparams.txt  mimo_test_data.txt  mimo_train_data.txt  miso_test_data.txt  miso_train_data.txt  siso_test_data.txt  siso_train_data.txt  test_conversion.py  test_gpr.cpp
test_python/: test_python_interface.py
